# robot_main

./: QUICK_START.md  README.md  ROBOT_SERIAL_SETUP.md  cleanup.sh  test_robot_serial.sh  test_robot_serial_unit.py  test_serial_reception.sh
install/: setup.sh
install/camera_node/lib/camera_node/: camera_node
install/camera_node/share/camera_node/: package.ps1  package.sh  package.xml
install/esp32_ros2_bridge/share/esp32_ros2_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_ai/lib/robot_ai/: ai_node
install/robot_description/share/robot_description/: local_setup.sh  package.ps1  package.sh  package.xml
install/robot_description/share/robot_description/config/: joint_limits.yaml
install/robot_description/share/robot_description/launch/: display.launch.py
install/robot_description/share/robot_description/rviz/: rviz.rviz
install/robot_description/share/robot_description/urdf/: gazebo.xacro
log/: latest_build
src/camera_node/: README.md  setup.py
src/camera_node/config/: camera.yaml
src/camera_node/launch/: camera.launch.py
src/esp32_ros2_bridge/: package.xml  setup.py
src/esp32_ros2_bridge/esp32_ros2_bridge/: esp32_bridge_node.py
src/esp32_ros2_bridge/launch/: esp32_bridge.launch.py
src/esp32_ros2_bridge/resource/: esp32_ros2_bridge
src/robot_ai/: README.md  setup.py
src/robot_ai/launch/: ai.launch.py
src/robot_ai/robot_ai/: detector.py
src/robot_bringup/: CMakeLists.txt
src/robot_bringup/launch/: localization.launch.py  robot.launch.py  view_robot.launch.py
src/robot_bringup/rviz/: robot_view.rviz
src/robot_bringup/scripts/: mount_hdd.sh  save_map.sh  unmount_hdd.sh
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: robot_state_publisher.launch.py
src/robot_description/urdf/: macros.xacro  materials.xacro  robot.urdf.xacro
src/robot_serial/: README.md  USAGE.md  package.xml  setup.py  test_serial_send.py
src/robot_serial/config/: serial.yaml
src/robot_serial/robot_serial/: serial_protocol.py
src/vision_ai_node/: README.md  package.xml  setup.cfg  setup.py
src/vision_ai_node/config/: vision.yaml
src/vision_msgs/: CMakeLists.txt
src/vision_msgs/msg/: DetectionArray.msg
(+134 files in other folders)
